@@ -1,5 +1,14 @@
+{% if wx is defined %}
+        </td>
+        <td></td>
+    </tr></table>
+    <br>
 
-        <div class="text-muted align-center">Copyright &copy; 2021 Prusa Research a.s. All rights reserved.</div>
+    <footer class="footer mt-auto py-3">
+      <div class="container">
+{% endif %}
+
+    <div><font color="#7a7a7a"><center><small>Copyright &copy; 2021 Prusa Research a.s. All rights reserved.</small></center></font></div>
         {%- if template_info is defined %}
         {%- from 'template_info.html' import render_info %}
         <pre class="template-info">
@@ -7,8 +16,7 @@
         </pre>
         {% endif %}
     </div>
-</footer>
+  </footer>
 
 </body>
-
 </html>
