@@ -20,16 +20,25 @@
     <link href="/favicon.ico" type="image/x-icon" rel="shortcut icon" />
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-100" bgcolor="black" text="white" link="white">
 
+{% if wx is not defined %}
     <header>
         <nav class="navbar navbar-expand-md navbar-dark">
             <div class="container-fluid">
                 <span class="flex-even d-flex justify-content-center navbar-brand">
-                    <img src="/img/prusa-link-logo.svg" alt="Prusa Link" height="40"/>
+                    <img src="/img/prusa-link-logo.gif" alt="Prusa Link"/>
                 </span>
             </div>
         </nav>
     </header>
 
     <div class="flex-shrink-0">
+{% else %}
+    <table width="100%" cellpadding="50">
+      <tr><td></td>
+          <td><img src="/img/prusa-link-logo.gif" alt="Prusa Link"/></td>
+          <td></td></tr>
+      <tr><td></td>
+          <td bgcolor="#1a1a1a">
+{% endif %}
