@@ -1,20 +1,12 @@
 {# vim:set softtabstop=2: -#}
 {% set title = '404 Not Found' -%}
+{% set wx = True %}
 {#% set refresh = 15 %#}
 {% include "_header.html" %}
 
-    <div class="container">
-      <div class="jumbotron http-error">
-        <h1>{{ title }}</h1>
-        <p>
-          Response for <code>{{ this_uri }}</code> not Found.
-        </p>
-      </div>
-    </div>
-
-  </div>
-
-  <footer class="footer mt-auto py-3">
-      <div class="container">
+            <h1>{{ title }}</h1>
+            <p>
+              Resource not found.
+            </p>
 
 {% include "_footer.html" %}
